<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_expression"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text=""
        android:textSize="40sp"
        android:textColor="@color/white"
        android:gravity="end|bottom"
        android:layout_gravity="end"
        android:layout_margin="5dp"
        android:layout_marginEnd="15dp"/>

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text=""
        android:textSize="30sp"
        android:textColor="@color/white"
        android:gravity="end|center"
        android:layout_margin="5dp"
        android:layout_marginEnd="15dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btn_AC"
            android:layout_width="187dp"
            android:layout_height="85dp"
            android:background="@drawable/custom_button"
            android:text="@string/AC_str"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:gravity="center|start"/>

        <Button
            android:id="@+id/btn_negative"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:background="@drawable/custom_button"
            android:text="@string/negative_str"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:layout_margin="5dp"/>


        <Button
            android:id="@+id/btn_division"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:background="@drawable/custom_button"
            android:text="@string/division_str"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:layout_margin="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btn_seven"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:background="@drawable/custom_button"
            android:text="@string/_7_str"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btn_eight"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:background="@drawable/custom_button"
            android:text="@string/_8_str"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btn_nine"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:background="@drawable/custom_button"
            android:text="@string/_9_str"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:background="@drawable/custom_button"
            android:text="@string/x_str"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:layout_margin="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btn_four"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:background="@drawable/custom_button"
            android:text="@string/_4_str"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btn_five"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:background="@drawable/custom_button"
            android:text="@string/_5_str"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btn_six"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:background="@drawable/custom_button"
            android:text="@string/_6_str"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:background="@drawable/custom_button"
            android:text="@string/minus_str"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:layout_margin="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btn_one"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:background="@drawable/custom_button"
            android:text="@string/_1_str"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btn_two"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:background="@drawable/custom_button"
            android:text="@string/_2_str"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btn_three"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:background="@drawable/custom_button"
            android:text="@string/_3_str"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:background="@drawable/custom_button"
            android:text="@string/plus_str"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:layout_margin="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btn_zero"
            android:layout_width="187dp"
            android:layout_height="85dp"
            android:layout_margin="5dp"
            android:background="@drawable/custom_button"
            android:gravity="center|start"
            android:text="@string/_0_str"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btn_dot"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:background="@drawable/custom_button"
            android:text="@string/dot_str"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btn_equal"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:background="@drawable/custom_button"
            android:text="@string/equal_str"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:layout_margin="5dp"/>


    </LinearLayout>

</LinearLayout>